# OpenCV4-Tutorials

./: .gitignore  README.md
0_Introduction/: linux_install.sh
1_Core/1.1 Mat - The Basic Image Container/: .gitignore  CMakeLists.txt  Mat.cc
1_Core/1.2 How to scan images, lookup tables and time measurement with OpenCV/: .gitignore  CMakeLists.txt  Scan_images.cc
1_Core/1.3 Mask operations on matrices/: .gitignore  CMakeLists.txt  mat_mask_operations.cc
1_Core/1.4 Operations with images/: .gitignore  CMakeLists.txt  mat_operations.cc
1_Core/1.5 Adding (blending) two images using OpenCV/: .gitignore  AddingImages.cc  CMakeLists.txt
1_Core/1.6 Changing the contrast and brightness of an image/: .gitignore  BasicLinearTransforms.cc  CMakeLists.txt
2_ImgProc/: .gitignore  CMakeLists.txt  Morphology_1.cc  Morphology_2  Morphology_2.cc
2_ImgProc/2.1_basic_drawing/: .gitignore  CMakeLists.txt  Drawing_1.cc
2_ImgProc/2.2_Smoothing/: CMakeLists.txt  Smoothing  Smoothing.cc
2_ImgProc/2.3_HitMiss/: CMakeLists.txt  HitMiss  HitMiss.cc
